--- a/nav.css
+++ b/nav.css
@@ -20,23 +20,16 @@
     color: #fff;
 }
 
-/*html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-padding-top: 6.5rem;
-    scroll-behavior: smooth;
-}*/
-
 .header-1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 9%;
+    padding: 1rem 9%;
     background-color: #eee;
 }
 
 .header-1 .logo {
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--black);
     font-weight: bolder;
 }
@@ -48,7 +41,7 @@
 
 .header-1 .search-box-container {
     display: flex;
-    height: 5rem;
+    height: 3rem;
 }
 
 .header-1 .search-box-container #search-box {
@@ -80,7 +73,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 9%;
+    padding: .5rem 9%;
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
     background-color: #fff;
     position: relative;
@@ -95,7 +88,7 @@
 
 .header-2 .navbar a {
     padding: .5rem 1.5rem;
-    font-size: 2rem;
+    font-size: 1rem;
     color: var(--black);
     border-radius: .5rem;
 }
@@ -125,86 +118,3 @@
     display: none;
 }
 
-
-/* ----------------- media query start -----------------  */
-
-@media (max-width:1200px) {
-    html {
-        font-size: 55%;
-    }
-}
-
-@media (max-width:991px) {
-    .header-1,
-    .header-2 {
-        padding: 2rem;
-    }
-}
-
-@media (max-width:768px) {
-    #menu-bar {
-        display: initial;
-    }
-    .header-2 .navbar {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: var(--green);
-        padding: 1rem 2rem;
-        display: none;
-    }
-    .header-2 .navbar.active {
-        display: initial;
-    }
-    .header-2 .navbar a {
-        font-size: 2.5rem;
-        display: block;
-        background: #fff;
-        text-align: center;
-        padding: 1rem;
-        margin: 1.5rem 0;
-    }
-}
-
-@media(max-width:450px) {
-    html {
-        font-size: 50%;
-    }
-    .header-1 {
-        flex-flow: column;
-    }
-    .header-1 .search-box-container {
-        width: 100%;
-        margin-top: 2rem;
-    }
-    .header-1 .logo {
-        font-size: 4rem;
-    }
-}
-
-.selector-for-some-widget {
-    box-sizing: content-box;
-  }
-
-  /*box */
-  body {
-    background: #e2e1e0;
-    text-align: center;
-  }
-  
-  .card {
-    background: #fff;
-    border: 2px solid black !important;
-    border-radius: 2px;
-    display: inline-block;
-    height: 300px;
-    margin: 1rem;
-    position: relative;
-    width: 304px;
-    padding:0;
-    box-sizing: border-box  ;
-  }
-
-  
-  
