--- a/demo.css
+++ b/demo.css
@@ -54,9 +54,19 @@
     display: none;
 }
 
-
-.cardheading{
+.cardheading {
     font-size: 30px;
     color: green;
     padding-bottom: 5px;
+}
+
+.changebutton {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    color: black;
+    margin: 20px;
+    background-color: black;
+    cursor: pointer;
+    box-shadow: 5px 2px 2px grey;
 }
