modified some files

--- a/demo.css
+++ b/demo.css
@@ -18,6 +18,7 @@
 .container-fluid {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 25px;
 }
 .accept {
     cursor: pointer;
@@ -64,9 +65,9 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    color: black;
+    color: white;
     margin: 20px;
-    background-color: black;
+    background-color: white;
     cursor: pointer;
-    box-shadow: 5px 2px 2px grey;
+
 }
