--- a/cart.css
+++ b/cart.css
@@ -231,7 +231,7 @@ button:focus,
 }
 .cart-qty-plus:hover,
 .cart-qty-minus:hover{
-	background-color: #5161ce;
+	background-color: #e03a3c;
 	color: #fff;
 }
 .img-prdct{
